frontend/components/Header/Header.module.css
.header {
    border-bottom: solid 1px #efefef;
    margin-bottom: 16px;
}

.headerContainer {
    height: 78px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
}

.logoDiv {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    padding: 20px;
}

.cart {
    padding: 23px;
}

.burgerBtn {
    background: none;
    border: none;
    cursor: pointer;
    color: #656565;
    padding: 20px;
}


.backdrop {
    position: fixed;
    top: env(safe-area-inset-top);
    left: 0;
    right: 0;
    bottom: env(safe-area-inset-bottom);
    background: rgba(0, 0, 0, 0.5);
    z-index: 10;
}

.menu {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    width: 75%;
    background: #fff;
    z-index: 20;
    display: flex;
    align-items: center;
    justify-content: center;
}

.closeBtn {
    position: fixed;
    top: 24px;
    right: 30px;
    background: none;
    border: none;
    cursor: pointer;
    color: #656565;
    z-index: 21;
}

.mobileMenuTextContainer {
    text-align: center;
    font-size: 1.3rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.mobileMenuText {
    display: flex;
    background: #df2727;
    padding: 16px;
    border-radius: 50px;
    color: #fff;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
}

.headerTextContainer {
    display: none;
}

.filtersMenuWrap {
    width: 100%;
}

@media (min-width: 1024px) {
    .logoDiv {
        position: static;
        transform: none;
    }

    .cart {
        display: none;
    }

    .burgerBtn {
        display: none;
    }

    .headerTextContainer {
        display: flex;
    }

    .headerTextContainer > * {
        padding: 20px;
    }

    .active {
        border-bottom: 2px solid grey;
        border-radius: 4px;
        padding-bottom: 4px;
    }
}

